# Enterprise-Custom-Document-Tools-Public

./: .env.example  .gitattributes  .gitignore  README.md  SECURITY.md  SECURITY_REMAINING_ISSUES.md  TESTING_NOTES.md  docker-compose.dev.yml  docker-compose.host.yml  docker-compose.yml
caddy/: Caddyfile
docs/: ARCHITECTURE.md  현재_아키텍처_및_구현_설명.md
markdown-pdf-service/: .dockerignore  Dockerfile  README.md  pyproject.toml
markdown-pdf-service/app/: grants.py  identity.py  main.py
markdown-pdf-service/config/: retention.yml
open-webui/: README.md  openwebui-markdown-pdf-tools.json  openwebui-python-tools.json  openwebui-rust-tools.json  openwebui-web-tools.json
python-service/: Dockerfile  README.md  pyproject.toml
python-service/app/: main.py
python-service/legacy-md-indexer-main/: md_catalog_builder.py  rag_generator.py  web_gui.py
runtime/: cloudflared.config.example.yml  install_overlay.sh  owui-overlay.css  owui-overlay.js
rust-service/: .dockerignore  Cargo.toml  Dockerfile  README.md
rust-service/DB/: README.md
rust-service/src/: legacy_engine.rs  legacy_port.rs  main.rs
rust-service/templates/: README.md  purchase_request.json  부품구매_교체이력_무.docx  부품구매_교체이력_유.docx  부품구매요청_교체이럭_유.docx  부품구매요청_교체이력_무.docx
scripts/: start_creator_services.sh  start_markdown_pdf_service.sh  start_openwebui_with_vllm.sh  start_parser_service.sh  start_web_service.sh  sync_openwebui_runtime.sh
search-service/: .dockerignore  Dockerfile  pyproject.toml
search-service/app/: __init__.py  main.py
search-service/legacy-md-indexer-main/: rag_generator.py  requirements.txt
web-service/: Dockerfile  README.md  pyproject.toml
web-service/app/: main.py
