[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "markdown-pdf-service"
version = "0.1.0"
description = "OpenAPI tool service for rendering Markdown reports to PDF"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.111,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
  "pydantic>=2.7,<3.0",
  "markdown-it-py>=3.0,<4.0",
  "openpyxl>=3.1,<4.0",
  "playwright>=1.44,<2.0",
  "python-docx>=1.1,<2.0"
]

[tool.setuptools]
packages = ["app"]
