[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "document-search-service"
version = "0.2.0"
description = "Search service: rank-based document retrieval (BM25 + Kiwi tokenizer)"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.111,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
  "pydantic>=2.7,<3.0",
  "requests>=2.32,<3.0",
  "rank_bm25>=0.2.2,<1.0",
  "kiwipiepy>=0.20,<1.0",
]

[tool.setuptools]
packages = ["app"]
