[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "web-service"
version = "0.2.0"
description = "Web fetch tool service for Open WebUI (powered by crawl4ai)"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.111,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
  "pydantic>=2.7,<3.0",
  "crawl4ai>=0.8,<1.0"
]

[tool.setuptools]
packages = ["app"]
